--- a/CSS/style.css
+++ b/CSS/style.css
@@ -130,3 +130,26 @@ hr {
   color: #030efb;
 
 }
+input[type="submit"]:hover, 
+input[type="reset"]:hover, 
+input[type="button"]:hover {
+  background-color: #3e8e41; /* Задаем цвет фона при наведении */
+}
+
+.my-button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.my-button:hover {
+  background-color: #3e8e41;
+}
